// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag base 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-primary"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-primary"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tag size 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="xrk-tag xrk-if xrk-ac xrk-tag-large xrk-tag-primary"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="xrk-tag xrk-if xrk-ac xrk-tag-middle xrk-tag-primary"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-primary"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="xrk-tag xrk-if xrk-ac xrk-tag-mini xrk-tag-primary"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="xrk-tag xrk-if xrk-ac xrk-tag-large xrk-tag-primary"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="xrk-tag xrk-if xrk-ac xrk-tag-middle xrk-tag-primary"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-primary"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="xrk-tag xrk-if xrk-ac xrk-tag-mini xrk-tag-primary"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tag type 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-error"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-link"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-pop"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-primary"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-warn"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-urgent"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-activity"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-error"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-link"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-pop"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-primary"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-warn"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-urgent"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-activity"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tag type 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-error xrk-tag-ghost"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-link xrk-tag-ghost"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-pop xrk-tag-ghost"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-primary xrk-tag-ghost"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-warn xrk-tag-ghost"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
      <div
        class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-urgent xrk-tag-ghost"
      >
        <span
          class="taro-text"
        >
          3-9岁
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-error xrk-tag-ghost"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-link xrk-tag-ghost"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-pop xrk-tag-ghost"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-primary xrk-tag-ghost"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-warn xrk-tag-ghost"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
    <div
      class="xrk-tag xrk-if xrk-ac xrk-tag-small xrk-tag-urgent xrk-tag-ghost"
    >
      <span
        class="taro-text"
      >
        3-9岁
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
